# docker

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  apko.yaml  build.sh  dagger.json  mise.toml  renovate.json
.github/actions/: docker.yml
.github/actions/apko/: action.yml
.github/actions/cosign/: action.yml
.github/actions/docker/: action.yml
.github/actions/grype/: action.yml
.github/workflows/: .apko.yml  .docker.yml  .release-apko.yml  .release-docker.yml  apko.yml  code-server.yml  crane.yml  dagger.yml  grafana.yml  grype.yml  helm.yml  iac.yml  k8s.yml  kshell.yml  kubectl.yml  melange.yml  openvpn.yml  prometheus-node-exporter.yml  prometheus.yml  python.yml  release.yaml  shell.yml  socat.yml  traefik.yml  weekly-build.yml  workflow-apko.yml  workflow-docker.yml
code-server/: Dockerfile
dagger/: pyproject.toml
dagger/src/: main.py
images/code-server/: Dockerfile  mise.toml
images/iac/: Dockerfile
images/keycloak/: Dockerfile
mise/tasks/docker/: build  (+2 more)
openvpn/: Dockerfile
opopops/: apko.yaml
opopops/apko/: Dockerfile
opopops/code-server/: Dockerfile
opopops/crane/: Dockerfile
opopops/grype/: Dockerfile
opopops/helm/: Dockerfile
opopops/iac/: Dockerfile
opopops/k8s/: Dockerfile
opopops/keycloak/: Dockerfile
opopops/kshell/: Dockerfile
opopops/melange/: Dockerfile
opopops/openvpn/: Dockerfile
opopops/prometheus/: Dockerfile
opopops/prometheus-node-exporter/: Dockerfile
opopops/shell/: Dockerfile
opopops/socat/: Dockerfile
opopops/traefik/: Dockerfile
scripts/: buildx.sh  dagger.sh  release.sh
(+29 files in other folders)
