[project]
name = "dagger-docker"
description = "Docker module for Dagger"
version = "0.0.4"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Germain GUEUTIER", email = "lemaildegermain@gmail.com" },
]
requires-python = ">=3.11"


[tool.black]
target-version = [
  "py311",
]
include = '\.pyi?$'
line-length = 120
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
